<resources>
    <string name="app_name">MovieApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_dont_have_an_account">Don\'t have an account?</string>
    <string name="title_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="title_menu_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="see_more">See more</string>
    <string name="welcome">Welcome,</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_address">Address</string>
    <string name="title_logout">Logout</string>
    <string name="title_update">Update</string>
    <string name="title_overview">Overview</string>
    <string name="title_genre_lang_release">%1$s | %2$s | %3$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_official_website">Official website:</string>
    <string name="hint_search">Search</string>
    <string name="content_profile_image">User profile image</string>
    <string name="profile_username">Username: \n%1$s</string>
    <string name="profile_email">Email: \n%1$s</string>
    <string name="profile_full_name">Full name: \n%1$s</string>
    <string name="profile_date_of_birth">Date of birth: \n%1$s</string>
    <string name="profile_address">Address: \n%1$s</string>
</resources>